# Decision-Intelligence-Assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
artifacts/chroma/: chroma.sqlite3
artifacts/chroma/c6de796d-e237-44cf-839f-e029d309990b/: index_metadata.pickle
artifacts/models/: combined_logreg_v1.pkl  combined_logreg_v1_metadata.json  standard_scaler_v1.pkl  tfidf_vectorizer_v1.pkl
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/prompts/: grounding.py
backend/app/rag/: chunker.py  embedder.py  loader.py  retriever.py  store.py
backend/app/routers/: analyze.py  health.py  ingest.py  inspect.py  search.py
backend/app/schemas/: analyze.py  common.py  priority.py  retrieval.py
backend/app/services/: analyze_service.py  llm_service.py  pricing_service.py  priority_service.py  rag_service.py
backend/app/utils/: logging.py
backend/artifacts/chroma/: chroma.sqlite3
backend/artifacts/chroma/507138fa-308c-47e2-a073-690b507336b2/: index_metadata.pickle
data/knowledge/: rag_case_base_v1.csv
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: AnswerComparison.jsx  AnswerPanel.jsx  MetricsPanel.jsx  OutputSwitcher.jsx  PriorityPanel.jsx  QueryInput.jsx  SourcePanel.jsx  UsagePanel.jsx
frontend/src/services/: api.js
notebooks/: notebook.ipynb
scripts/preprocess/: prepare_data.py
tests/: test_base_preprocessing.py  test_reply_linking.py
