[project]
name = "decision-intelligence-notebooks"
version = "0.0.0"
description = "Local uv-managed environment for notebook and data-preparation work (preprocessing scripts, exploratory notebooks, tests)."
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "pytest>=8.2",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
]

[tool.uv]
package = false
